まとめてコミットしちゃうぞ

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
                                             <source media="(max-width: 768px)" /><img class="img2"
-                                                src="traveler-2203666_1280.jpg" class="tree" alt="" />
+                                                src="pexels-eunice-lui-931887.jpg" class="tree" alt="" />
                                         </picture>
                                     </div>
                                 </div>
@@ -305,11 +305,11 @@
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SERVICE OF TRIP</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    旅に役立つ様々なサービスをご利用いただけます</p>
+                                    ご出発前にくつろぎのひとときを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    旅のパートナー</h3>
+                                    海外・国内空港ラウンジサービス</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2">旅行サービス特別優待</p><a class="c-btn add-line c-top_block_btn"
+                                    data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用いただける「プライオリティパス」<br>に無料でご登録いただけます。</p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
@@ -320,46 +320,69 @@
 
 
 
-
-                <section id="CP_ACCORDION">
-                    <div class="p-accordion">
-                        <ul>
-                            <li class="p-accordion__container" data-module="ScrollFade Accordion">
-                                <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">旅行にあたって</div>
-                                    <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
-                                        REQUIREMENTS
+                <section class="p-article__trialset__use" id="TRIALSET_USE" data-gatarget="tri7">
+                    <div class="l-use">
+                        <div class="c-article__ttl__block" data-module="ScrollFade">
+                            <p class="c-article__ttl__en" data-target="browserChecker">VALUEABLE　TIME</p>
+                            <h3 class="c-article__ttl" data-target="browserChecker"> 最高水準の旅行サービス</h3>
+                        </div>
+                        <div class="c-use__cont">
+                            <ul class="c-use__cont__list" data-module="ScrollFade">
+                                <li class="thema--purple c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="swimming-828795_640.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">Tablet®︎Hotels</p>
+                                                <p class="border">ミシュランお墨付き、<br>世界のホテルガイド</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    「生涯忘れることのできない体験」を約束してくれるホテルを厳選してご紹介。
+                                                    セゾンプラチナ・アメリカン・エキスプレス・カードなら専用ページからのご登録でTablet Plusの年会費(99ドル)が永年無料。各ホテルの選りすぐりの特典をお楽しみいただけます。</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="arrow.png"
-                                            alt="" /></div>
-                                </div>
-                                <div class="p-accordion__content">
-                                    <div class="p-accordion__content__inner">
-                                        <ul class="p-accordion__list">
-                                            <li class="p-accordion__list__item" data-target="browserChecker">ワンランク上のバカンスを</li>
-                                            <p class="border2">LIVE THE WORLD</p>
-                                            <p class="p-text">年間を通じてアジアを中心とした人気レストラン、ショップ、ホテル等の優待特典をご用意しております。より充実した海外旅行をお楽しみください</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">ミシュランお墨付き、世界のホテルガイド</li>
-                                            <p class="border2">Tablet®︎ Hotels</p>
-                                            <p class="p-text">「生涯忘れることのできない体験」を約束してくれるホテルを厳選してご紹介。セゾンプラチナ・アメリカン・エキスプレス・カードなら、専用ページからのご登録でTablet Plusの年会費が永年無料。各ホテルの選りすぐりの特典をお楽しみいたお楽しみいただけます。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">あなたの理想のプランをサポート</li>
-                                            <p class="border2">海外アシスタンスデスク</p>
-                                            <p class="p-text">海外渡航中の現地情報のご案内を始め、さまざまなご予約の代行を承ります。ホテルやレストランのご予約・ご案内や各種チケットの手配から、パスポート紛失などのトラブルを全て日本語で承ります。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">旅先の気候に合わせてご出発</li>
-                                            <p class="border2">コートお預かりサービスご優待</p>
-                                            <p class="p-text">冬の外出に欠かせないコートも、海外旅行先では大きな荷物になってしまうことも。そんな時には「コートお預かりサービス」を会員様をご優待料金でご利用いただけます。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">旅行先でもいつものスマホで</li>
-                                            <p class="border2">海外用Wi-Fi・携帯電話レンタルサービス</p>
-                                            <p class="p-text">世界各国のインターネットが接続可能になる海外Wi-Fi・携帯電話レンタルサービスを会員様特典付きでご利用いただけます。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">旅の予約はいつでもお任せ</li>
-                                            <p class="border2">カードデスク・サービス</p>
-                                            <p class="p-text">ホテルや航空券・JR特急券のご予約、海外出発前の渡航先情報のご案内(現地レストラン、オプショナルツアー、舞台チケットのご紹介やご予約など)、会員様のご希望に合わせた旅行プランのご手配まで24時間365日、専任スタッフがきめ細かくご提案・ご対応させていただきます</p>
-                                        </ul>
+                                </li>
+                                <li class="c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="the-palm-962785_640.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">カードデスクサービス</p>
+                                                <p class="border">旅の予約はいつでもお任せ</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    ホテルや航空券・JR特急券のご予約、海外出張前の渡航先情報のご案内(現地レストラン、オプショナルツアー、舞台チケットのご紹介やご予約)、会員様のご希望に合わせた旅行プランのお手配まで24時間365日、専任スタッフがきめ細かくご提案・ご対応させていただきます。
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
+                                </li>
+                                <li class="thema--purple c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="mobile-phone-1875813_640.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">海外用Wi-Fi<br>携帯電話レンタルサービス</p>
+                                                <p class="border">旅行先でもいつものスマホで</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    世界各国でインターネットが接続可能になる海外Wi-Fi・携帯電話レンタルサービスを会員様特典付きでご利用いただけます。
+                                                </p>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
 
-                        </ul>
+                <section class="p-article__trialset__use" id="TRIALSET_USE" data-gatarget="tri7">
+                    <div class="l-use">
+                        <div class="c-use__cont">
+                            <ul class="c-use__cont__list" data-module="ScrollFade">
+                                
+                            </ul>
+                        </div>
                     </div>
                 </section>
 
@@ -376,7 +399,7 @@
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
                                             <source media="(max-width: 768px)" /><img class="img2"
-                                                src="helena-lopes-e3OUQGT9bWU-unsplash.jpg" class="tree" alt="" />
+                                                src="room-4768551_1280.jpg" class="tree" alt="" />
                                         </picture>
                                     </div>
                                 </div>
@@ -385,11 +408,11 @@
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
                                     SPECIAL LIFE</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    特別なサービスで日常に彩りを</p>
+                                    特別な空間で優雅なプライベートタイムを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    日常生活を特別に</h3>
+                                    プレミアムホテルプリビレッジ</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2">日常サービス特別優待</p><a class="c-btn add-line c-top_block_btn"
+                                    data-FadeIn="2">全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす優雅なひとときをお楽しみください。</p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
@@ -400,42 +423,58 @@
 
                 </section>
 
-                <section id="CP_ACCORDION">
-                    <div class="p-accordion">
-                        <ul>
-                            <li class="p-accordion__container" data-module="ScrollFade Accordion">
-                                <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">特別な日常へ</div>
-                                    <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
-                                        REQUIREMENTS
+                <section class="p-article__trialset__use" id="TRIALSET_USE" data-gatarget="tri7">
+                    <div class="l-use">
+                        <div class="c-article__ttl__block" data-module="ScrollFade">
+                            <p class="c-article__ttl__en" data-target="browserChecker">VALUEABLE　TIME</p>
+                            <h3 class="c-article__ttl" data-target="browserChecker"> 特別なサービスで日常に彩りを</h3>
+                        </div>
+                        <div class="c-use__cont">
+                            <ul class="c-use__cont__list" data-module="ScrollFade">
+                                <li class="c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="spa-853462_640.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">オントレ</p>
+                                                <p class="border">さまざまなシーンを豊かに演出</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    一流ホテルをはじめダイニング、スパ、ショッピングなど上質なお時間をお過ごしいただける特別なご優待サービスをご用意し通ります。プラチナメンバーだけにご提供するアメリカン・エキスプレスならではのラインナップをお楽しみください。
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="arrow.png"
-                                            alt="" /></div>
-                                </div>
-                                <div class="p-accordion__content">
-                                    <div class="p-accordion__content__inner">
-                                        <ul class="p-accordion__list">
-                                            <li class="p-accordion__list__item" data-target="browserChecker">カードを持つだけで優待のある生活</li>
-                                            <p class="border2">セゾンカード優待ショップ</p>
-                                            <p class="p-text">グルメ・ショッピング・トラベルなど全国各地の優待情報をご紹介。セゾンカードのご利用で、全国のショップやレストラン・お出かけスポットで割引が受けられます。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">様々なシーンを豊かに演出</li>
-                                            <p class="border2">オントレ</p>
-                                            <p class="p-text">一流ホテルをはじめ、ダイニング、スパショッピングなど上質な時間をお過ごしいただける特別なご用意しております。プラチナメンバーだけにご提案するアメリカン・エキスプレスならではのラインナップをお楽しみください。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">特別な空間で優雅なプライベートタイムを</li>
-                                            <p class="border2">プレミアムホテルプリビレッジ</p>
-                                            <p class="p-text">全国のプレミアムホテルを優待料金でご利用いただけるほか、ホテルごとに会員様だけの特典をご用意しております。日常の喧騒から逃れ、特別な空間で過ごす優雅なひとときをお楽しみください。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">特別なゴルフ体験をお届け</li>
-                                            <p class="border2">セゾンプレミアムゴルフサービス</p>
-                                            <p class="p-text">憧れの名門コースでのプレーをはじめ、コース料金や、プロを招いたイベントなどをご優待料金でご利用いただけます</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">運動をもっと気軽に</li>
-                                            <p class="border2">「コナミスポーツクラブ」にご優待</p>
-                                            <p class="p-text">全国約500ヵ所のコナミスポーツクラブおよび提携施設にて、「月会費プラン」が法人会員料金でご利用いただけます。また一回ごとの利用ができる「都度利用プラン」もご用意しております。</p>
-                                        </ul>
+                                </li>
+                                <li class="thema--purple c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="soheb-zaidi-awin-9RBlpE-unsplash.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">セゾンプレミアム<br>ゴルフサービス</p>
+                                                <p class="border">特別なゴルフ体験をお届け</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    憧れの名門コースでのプレーをはじめ、コースレッスン会やプロを招いたイベントなどご優待料金でご利用いただけます。
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-
-                        </ul>
+                                </li>
+                                <li class="c-use__cont__list__item__container">
+                                    <div class="c-use__cont__list__item__inner">
+                                        <div class="object">
+                                            <div class="object__inner">
+                                                <img class="service" src="humphrey-muleba-LOA2mTj1vhc-unsplash.jpg" alt="">
+                                                <p class="ttl ttl4" data-target="browserChecker">「コナミスポーツクラブ」にご優待</p>
+                                                <p class="border">運動をもっと気軽に</p>
+                                                <p class="txt" data-target="browserChecker">
+                                                    全国役500ヵ所のコナミスポーツクラブ及び提携施設にて「月会費プラン」が法人会員料金でご利用いただけます。また一回ごとの利用ができる「都度利用プラン」もご用意しております。
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
 
