27の深夜０時のコミット

--- a/index.html
+++ b/index.html
@@ -479,45 +479,12 @@
                 </section>
 
 
-                
-                <section class="c-section" id="TOP_CAMPAIGN" data-section="campaign" data-gatarget="top4">
-                    <div class="p-top-campaign_container">
-                        <div class="p-top-campaign_inner c-top_inner">
-                            <div class="c-top_panel_object__wrap" data-scalein="data-scalein">
-                                <div class="c-top_panel_object">
-                                    <div class="c-top_panel_object__shadow">
-                                        <picture>
-                                            <img class="img0" src="bady-abbas-67GC0YaeGQc-unsplash.jpg" alt="" />
-                                        </picture>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl ttl" data-target="browserChecker" data-FadeIn="0.6">
-                                    POINT
-                                </h2>
-                                <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    お得にポイントを貯めて、さらに豊かな生活を </p>
-                                <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    ポイント</h3>
-                                <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2"><span class='u-term is-purple'>究極の豊かさに満ちた日々へご案内</span>
-                                </p><a class="c-btn add-line c-top_block_btn"
-                                    href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
-                                            class="animLine"></span></span></a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
                 <section id="CP_ACCORDION">
                     <div class="p-accordion">
                         <ul>
                             <li class="p-accordion__container" data-module="ScrollFade Accordion">
                                 <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">ポイント詳細</div>
+                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">その他、プラチナのず抜けたサービス</div>
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
@@ -541,71 +508,6 @@
                         </ul>
                     </div>
                 </section>
-
-
-                <section class="c-section" id="TOP_CAMPAIGN" data-section="campaign" data-gatarget="top4">
-                    <div class="p-top-campaign_container">
-                        <div class="p-top-campaign_inner c-top_inner">
-                            <div class="c-top_panel_object__wrap" data-scalein="data-scalein">
-                                <div class="c-top_panel_object">
-                                    <div class="c-top_panel_object__shadow">
-                                        <picture>
-                                            <img class="img0" src="adi-goldstein-EUsVwEOsblE-unsplash.jpg" alt="" />
-                                        </picture>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="c-top_block__content">
-                                <h2 class="c-top_block__sec_ttl ttl" data-target="browserChecker" data-FadeIn="0.6">
-                                    SECURITY
-                                </h2>
-                                <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
-                                    安心安全にカードをご利用いただくために</p>
-                                <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    カードのセキュリティ</h3>
-                                <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2"><span class='u-term is-purple'>究極の豊かさに満ちた日々へご案内</span>
-                                </p><a class="c-btn add-line c-top_block_btn"
-                                    href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
-                                    data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
-                                            class="animLine"></span></span></a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-
-                <section id="CP_ACCORDION">
-                    <div class="p-accordion">
-                        <ul>
-                            <li class="p-accordion__container" data-module="ScrollFade Accordion">
-                                <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">セキュリティ詳細</div>
-                                    <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
-                                        REQUIREMENTS
-                                    </div>
-                                    <div class="p-accordion__btn__img"><img src="arrow.png"
-                                            alt="" /></div>
-                                </div>
-                                <div class="p-accordion__content">
-                                    <div class="p-accordion__content__inner">
-                                        <ul class="p-accordion__list">
-                                            <li class="p-accordion__list__item" data-target="browserChecker">万一のトラブルも手厚く補償</li>
-                                            <p class="border2">ショッピングの安心保険</p>
-                                            <p class="p-text">国内・海外を問わずセゾン・プラチナ・エキスプレス・カードを利用して購入した物品の破損・盗難などの損害をご購入日から120日間、年間300万円まで補償いたします。</p>
-                                            <li class="p-accordion__list__item" data-target="browserChecker">インターネットでのお買い物も安心</li>
-                                            <p class="border2">オンライン・プロテクション</p>
-                                            <p class="p-text">オンライン・ショッピングで「カード番号を入力するのは少し不安」という方も、心配はご無用です。心当たりの無いインターネット上での不正利用による損害を補償します。安心してオンラインショッピングをお楽しみいただけます。</p>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-
-                        </ul>
-                    </div>
-                </section>
-
 
 
                 
@@ -671,91 +573,6 @@
             </a>
         </div>
 
-        <section class="p-article__trialset__use" id="TRIALSET_USE" data-gatarget="tri7">
-            <div class="l-use">
-                <div class="c-article__ttl__block" data-module="ScrollFade">
-                    <p class="c-article__ttl__en" data-target="browserChecker">VALUEABLE　TIME</p>
-                    <h3 class="c-article__ttl" data-target="browserChecker"> プラチナが提供する最高水準のサービス</h3>
-                </div>
-                <div class="c-use__cont">
-                    <ul class="c-use__cont__list" data-module="ScrollFade">
-                        <li class="thema--purple c-use__cont__list__item__container">
-                            <div class="c-use__cont__list__item__inner">
-                                <div class="object">
-                                    <div class="object__inner">
-                                        <p class="ttl ttl4" data-target="browserChecker">ショッピングで<br>JALのマイルを貯める</p>
-                                        <p class="border">海外/国内空港ラウンジサービス</p>
-                                        <p class="txt" data-target="browserChecker">
-                                            SAISON MILE CULB
-                                            にご登録いただきますとショッピングのご利用1,000円ごとにJALマイルが自動的に10マイル貯まります。さらに優遇ポイントとして2,000円ごとに永久不滅ポイント1ポイント貯まります。
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="c-use__cont__list__item__container">
-                            <div class="c-use__cont__list__item__inner">
-                                <div class="object">
-                                    <div class="object__inner">
-                                        <p class="ttl ttl4" data-target="browserChecker">ご出発の前に<br>くつろぎのひとときを</p>
-                                        <p class="border">海外/国内空港ラウンジサービス</p>
-                                        <p class="txt" data-target="browserChecker">
-                                            海外1,300ヵ所以上の空港ラウンジをご利用いただける｢プライオリティ・パス｣に無料でご登録いただけます。(通常年会費429米ドル)
-                                            また、国内主要空港のラウンジを無料でご利用いただけます。</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="thema--purple c-use__cont__list__item__container">
-                            <div class="c-use__cont__list__item__inner">
-                                <div class="object">
-                                    <div class="object__inner">
-                                        <p class="ttl ttl4" data-target="browserChecker">楽しい旅行には<br>万全の備えを</p>
-                                        <p class="border">海外/国内旅行損害保険</p>
-                                        <p class="txt" data-target="browserChecker">
-                                            海外旅行中の事故について最高1億円(注1)まで、国内旅行中の事故について最高5,000万円(注2)までを自動的に補償いたします。会員様・ファミリーカード会員様はもちろん、ご家族(注3)も補償いたします。(注4)
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-
-        <div class="l-use">
-            <div class="c-use__cont">
-                <ul class="c-use__cont__list" data-module="ScrollFade">
-                    <li class="thema--purple c-use__cont__list__item__container">
-                        <div class="c-use__cont__list__item__inner">
-                            <div class="object">
-                                <div class="object__inner">
-                                    <p class="ttl ttl4" data-target="browserChecker">専任のコンシェルジュが<br>あなたをサポート</p>
-                                    <p class="border">コンシェルジュサービス</p>
-                                    <p class="txt" data-target="browserChecker">
-                                        国内レストランのご案内・ご予約やハイヤー送迎サービス、フラワーギフトのお手配などさまざまなお問い合わせに専任のスタッフが24時間365日お応えいたします。
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="c-use__cont__list__item__container">
-                        <div class="c-use__cont__list__item__inner">
-                            <div class="object">
-                                <div class="object__inner">
-                                    <p class="ttl ttl4" data-target="browserChecker">空港までの<br>移動を手軽に</p>
-                                    <p class="border">手荷物無料宅配サービス</p>
-                                    <p class="txt" data-target="browserChecker">
-                                        国際線をご利用の際、空港－ご自宅間の手荷物配送をスーツケース1個まで無料でご利用いただけます。ファミリーカード会員様も同様にご利用いただけます。</p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
 
 
 
