--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                         高ステータスな人間へ</p>
                                     <p class="c-top_block__desc--lv1 p-top-mv_block__desc--lv1 an"
                                         data-target="browserChecker" data-FadeIn="2.5">
-                                        プラチナという至高の輝き<br class="is-sp">それは行動力の象徴</p>
+                                        プラチナという至高の輝きそれは行動力の象徴</p>
                                 </div>
 
                             </div>
@@ -308,8 +308,8 @@
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     ご出発前にくつろぎのひとときを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    海外・国内空港ラウンジサービス</h3>
-                                <p class="c-top_block__copy add-line__before" data-target="browserChecker"
+                                    海外・国内空港<br class="is-sp">ラウンジサービス</h3>
+                                <p class="c-top_block__copy add-line__before hei1" data-target="browserChecker"
                                     data-FadeIn="2">海外1,300ヵ所以上の空港ラウンジを<br>ご利用いただける「プライオリティパス」<br>に無料でご登録いただけます。</p><a
                                     class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
@@ -414,8 +414,8 @@
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     特別な空間で優雅なプライベートタイムを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
-                                    プレミアムホテルプリビレッジ</h3>
-                                <p class="c-top_block__copy add-line__before" data-target="browserChecker"
+                                    プレミアムホテル<br class="is-sp">プリビレッジ</h3>
+                                <p class="c-top_block__copy add-line__before hei2" data-target="browserChecker"
                                     data-FadeIn="2">
                                     全国のプレミアムホテルを優待料金で<br>ご利用いただけるほか、ホテルごとに<br>会員様だけの特典をご用意しております。<br>日常の喧騒から逃れ、特別な空間で<br>過ごす優雅なひとときをお楽しみください。
                                 </p><a class="c-btn add-line c-top_block_btn"
@@ -539,7 +539,7 @@
                     <div class="p-trialset__try__container">
                         <div class="p-trialset__try__inner">
                             <h3 class="p-trialset__try__hdg" data-module="ScrollFade"
-                                style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">安心安全に<br>カードを<br
+                                style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">安心安全にカードを<br
                                     class="is-sp">ご利用いただくために</h3>
                             <div class="p-trial__card__block">
                                 <div class="p-products__card__block" data-module="ScrollFade"
@@ -583,7 +583,7 @@
                             </tr>
                             <tr>
                                 <th>入会資格</th>
-                                <td>安定した収入があり、社会的信用を有するご連絡可能な方 (学生・未成年を除く)</td>
+                                <td>安定した収入があり、社会的信用を有するご連絡可能な方<br class="is-sp"> (学生・未成年を除く)</td>
                             </tr>
                         </table>
                     </div>
@@ -617,10 +617,9 @@
                             </div>
                             <div class="c-top_block__content">
                                 <h3 class="c-top_block__hdg--lv1" data-target="browserChecker" data-lineAnim="0">
-                                    今なら『ご入会特典』永久不滅ポイント<br>最大40,000円相当プレゼント</h3>
+                                    今なら『ご入会特典』<br class="is-sp">永久不滅ポイント<br>最大40,000円相当プレゼント</h3>
                                 <p class="p-top-detail_block__desc--lv1" data-target="browserChecker" data-FadeIn="0.6">
-                                    【新規ご入会キャンペーン】<br class="is-sp">2020年10月20日(火)<br
-                                        class="is-sp">〜<br>2020年12月23日(水)まで<br><br class="is-sp">①
+                                    【新規ご入会キャンペーン】<br class="is-sp">2020年10月20日(火)〜<br>2020年12月23日(水)まで<br><br class="is-sp">①
                                     500,000円以上のご利用で、40,000円相当(8,000ポイント)をプレゼント<br><br class="is-sp">
                                     ② 300,000円以上のご利用で、24,000円相当(4,800ポイント)をプレゼント
                                     <br class="is-sp"><br>③ 100,000円以上のご利用で、7,000円相当(1,400ポイント)をプレゼント</p>
@@ -720,7 +719,7 @@
             <div class="l-knowOf">
                 <div class="c-know_of__container">
                     <div class="c-know_of__inner">
-                        <h4 class="c-know_of__page_ttl" data-module="ScrollFade" data-target="browserChecker">
+                        <h4 class="c-know_of__page_ttl another" data-module="ScrollFade" data-target="browserChecker">
                             プラチナ以外のセゾンカードを<br class="is-sp">ご購入希望のお客様 </h4>
                     </div>
                 </div>
@@ -800,8 +799,8 @@
                 <div class="c-footer_inner">
                     <div class="c-footer__block">
                         <div class="c-footer_product_area">
-                            <h2 class="c-footer__logo"><img src="assets/images/common/h1/header_logo_box.gif"
-                                    alt="REVITAL" /></h2>
+                            <h2 class="c-footer__logo"><img class="f-logo" src="footer-logo.png"
+                                    alt="" /></h2>
                             <p class="c-footer__sub" data-target="browserChecker">プラチナという至高の輝き、それは行動力の象徴。</p>
                         </div>
                         <div class="c-footer_link_area">
