--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <header>
             <div class="c-header_container">
                 <div class="c-header_inner">
-                    <h1 class="c-header-logo">
+                    <div class="c-header-logo">
                         <a href="index.html"><img src="header_logo_box.gif" alt="" /></a>
-                    </h1>
+                    </div>
                     <div class="c-header_block__menu">
-                        <p class="topText">SAISON AMERICAN EXPRESS PLATINUM CARD</p>
+                        <h1 class="topText">SAISON AMERICAN EXPRESS PLATINUM CARD</h1>
                     </div>
                 </div>
             </div>
@@ -336,7 +336,7 @@
                                             <div class="object__inner">
                                                 <img class="service" src="swimming-828795_640.jpg" alt="">
                                                 <p class="ttl ttl4" data-target="browserChecker">Tablet®︎Hotels</p>
-                                                <p class="border">ミシュランお墨付き、<br>世界のホテルガイド</p>
+                                                <p class="border">ミシュランお墨付き、<span>世界のホテルガイド</span></p>
                                                 <p class="txt" data-target="browserChecker">
                                                     「生涯忘れることのできない体験」を約束してくれるホテルを厳選してご紹介。
                                                     セゾンプラチナ・アメリカン・エキスプレス・カードなら専用ページからのご登録でTablet
@@ -674,7 +674,7 @@
                         <span>【カード・キャッシングについて】</span><br>カードをお受け取りになりましたら、すぐにご署名をお願いします。
                     </p>
                     <p class="p-application__box__text" data-target="browserChecker">※
-                        暗証番号<br />・当社からご登録いただいた暗証番号をおたずねすることは絶対にございません。<br>・誤った暗証番号を連続して一定回数入力した場合、セキュリティ機能により、ICカード対応端末でご利用いただけなくなりますのでご注意ください。
+                        暗証番号<br />・当社からご登録いただいた暗証番号をお尋ねすることは絶対にございません。<br>・誤った暗証番号を連続して一定回数入力した場合、セキュリティ機能により、ICカード対応端末でご利用いただけなくなりますのでご注意ください。
                     </p>
                 </div>
             </div>
@@ -703,7 +703,7 @@
                         <span>【リボについて】</span><br>ご利用いただいた分をあとからリボに変更したり、すべてのご利用分を自動でリボに変更することができます。
                     </p>
                     <p class="p-application__box__text" data-target="browserChecker">※
-                        リボ宣言・変更<br />・1回・2回・ボーナス一括でのご利用分をあとからリボに変更できます。<br>・一度のお手続きで国内・海外を問わずすべてのご利用分が、自動的にリボになります。増額払いや全額払いが可能で、いつでも簡単に解除*ができます。
+                        リボ宣言・変更<br />・1回・2回・ボーナス一括でのご利用分をあとからリボに変更できます。<br>・一度のお手続きで国内・海外を問わずすべてのご利用分が、自動的にリボになります。増額払いや全額払いが可能で、いつでも簡単に解除ができます。
                     </p>
                 </div>
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
