修正しました

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         <ul>
                             <li class="p-accordion__container" data-module="ScrollFade Accordion">
                                 <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">その他、プラチナのず抜けたサービス
+                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">その他、プラチナの頭抜けたサービス
                                     </div>
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
